# bizclaw

./: .dockerignore  BRANCHING-STRATEGY.md  BUILD-DOCKER-LOCAL.md  CHANGELOG.md  CHERRY-PICK-PLAN.md  CI-CD-SETUP.md  CI-CD-STATUS.md  Cargo.toml  Cross.toml  DAILY-SYNC-SETUP.md  DOCKER-IMAGE-TROUBLESHOOTING.md  DOCKER-SIGNAL-HANDLING.md  Dockerfile  Makefile  QUICK-START.md  RASPBERRY-PI.md  README.md  RELEASE-v0.2.0.md  RELEASE-v0.3.0.md  RELEASE-v0.3.1.md  RELEASE-v0.3.2.md  RELEASE-v0.3.3.md  RELEASE-v0.3.4.md  RELEASE-v0.3.5.md  RELEASE-v0.3.6.md  RELEASE-v0.3.7.md  RUST-VERSION.md  STORAGE-CLEANUP.md  SYNC-SUMMARY.md  UPSTREAM-SYNC-STATUS.md  UPSTREAM-SYNC-WORKFLOW.md  build-docker-local.ps1  build-docker-wsl.ps1  docker-compose.yml  release.ps1
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: README.md
.github/workflows/: ci.yml  cleanup-old-releases.yml  release.yml  upstream-sync-check.yml
crates/bizclaw-brain/: Cargo.toml
crates/bizclaw-brain/src/: attention.rs  forward.rs  gguf.rs  grammar.rs  kv_cache.rs  lib.rs  llamacpp.rs  mmap.rs  model.rs  quant.rs  sampler.rs  tokenizer.rs
crates/bizclaw-brain/src/simd/: avx2.rs  mod.rs  neon.rs  sse2.rs
crates/bizclaw-channels/: Cargo.toml
crates/bizclaw-gateway/: Cargo.toml
crates/bizclaw-platform/: Cargo.toml
crates/bizclaw-scheduler/: Cargo.toml
crates/bizclaw-security/: Cargo.toml
crates/bizclaw-tools/: Cargo.toml
data/: gallery-skills.json
landing/: docs.html  index.html
scripts/: cleanup-releases.ps1  cleanup-releases.sh
src/: main.rs  platform_main.rs
(+77 files in other folders)
