[package]
name = "bizclaw-brain"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local LLM inference engine - PicoLM rewrite in Rust"

[features]
default = ["rust-native-backend"]
rust-native-backend = []
llama-backend = ["dep:bindgen", "dep:cc"]

[dependencies]
bizclaw-core.workspace = true
memmap2.workspace = true
rayon.workspace = true
half.workspace = true
byteorder.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
rand.workspace = true

[build-dependencies]
bindgen = { version = "0.71", optional = true }
cc = { version = "1", optional = true }
